tests/types_first_skip_recheck/types_first_skip_recheck.exp

Server should start in types-first mode
Error ----------------------------------------------------------------------------------------------------- test2.js:3:2

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test2.js:3:2
   3| (require('./test1'): string);
       ^^^^^^^^^^^^^^^^^^

References:
   test1.js:5:18
   5| module.exports = 0;
                       ^ [1]
   test2.js:3:22
   3| (require('./test1'): string);
                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test3.js:5:2

Cannot cast `0` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test3.js:5:2
   5| (0: string);
       ^ [1]

References:
   test3.js:5:5
   5| (0: string);
          ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- unparsed.js:8:1

Unexpected token `=`

   8| =
      ^



Found 3 errors

Adding a line should cause minimal rechecking (but preserve errors)
Error ----------------------------------------------------------------------------------------------------- test2.js:3:2

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test2.js:3:2
   3| (require('./test1'): string);
       ^^^^^^^^^^^^^^^^^^

References:
   test1.js:6:18
   6| module.exports = 0;
                       ^ [1]
   test2.js:3:22
   3| (require('./test1'): string);
                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test3.js:5:2

Cannot cast `0` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test3.js:5:2
   5| (0: string);
       ^ [1]

References:
   test3.js:5:5
   5| (0: string);
          ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- unparsed.js:8:1

Unexpected token `=`

   8| =
      ^



Found 3 errors

========Skipping stats========
Merge skipped 1 of 3 modules
Check will skip 1 of 3 files

Adding a comment should cause minimal rechecking (but preserve errors)
Error ----------------------------------------------------------------------------------------------------- test2.js:3:2

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test2.js:3:2
   3| (require('./test1'): string);
       ^^^^^^^^^^^^^^^^^^

References:
   test1.js:6:18
   6| module.exports = 0;
                       ^ [1]
   test2.js:3:22
   3| (require('./test1'): string);
                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test3.js:5:2

Cannot cast `0` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test3.js:5:2
   5| (0: string);
       ^ [1]

References:
   test3.js:5:5
   5| (0: string);
          ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- unparsed.js:8:1

Unexpected token `=`

   8| =
      ^



Found 3 errors

========Skipping stats========
Merge skipped 2 of 3 modules
Check will skip 2 of 3 files
